# gandlaf

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  makefile
.github/workflows/: rust.yml
env_examples/: development.env
local/: docker-compose.yml  recreate_containers.sh
local/sql/dev_initial/: 0000_initial.sql
src/: app.rs  lib.rs  main.rs
src/adapters/: dtos.rs  mod.rs
src/adapters/repositories/: errors.rs  mod.rs  session_repo.rs  user_repo.rs
src/app_modules/: app_state.rs  health.rs  middleware.rs  mod.rs
src/app_modules/api/: errors.rs  mod.rs
src/app_modules/api/v1/: mod.rs  routes.rs
src/app_modules/api/v1/handlers/: auth_handlers.rs  mod.rs  user_handler.rs
src/app_modules/api/v1/schemas/: mod.rs  user_schemas.rs
src/app_modules/auth/: auth_config.rs  errors.rs  mod.rs
src/app_modules/auth/strategies/: email_password_strategy.rs  mod.rs  strategy.rs
src/config/: app_config.rs  database.rs  defaults.rs  mod.rs  telemetry.rs
src/domain/: mod.rs
src/domain/models/: auth.rs  auth_provider.rs  mod.rs  user.rs
src/domain/services/: auth_service.rs  email_service.rs  errors.rs  mod.rs  user_service.rs
src/utils/: mod.rs  password.rs  user_agent.rs
tests/: mod.rs
tests/_test_utils/: database.rs  mod.rs
tests/integration/: mod.rs  user_registration.rs
tests/test_utils/: mocks.rs
tests/unit/: mod.rs  user_registration.rs
