[package]
name = "gandalf"
version = "0.1.0"
edition = "2024"

[dependencies]
# Configuration
dotenvy="0.15"
once_cell = "1.21.3"

# Async runtime
tokio = { version = "1.44", features = ["full", "rt-multi-thread"] }
async-trait = "0.1.88"

# Postgres Database
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"


# Logging and Observability
tracing = "0.1"
