[package]
name = "gandalf"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"

# Configuration
dotenvy="0.15"
once_cell = "1.21.3"

# Async runtime
tokio = { version = "1.44", features = ["full"] }
async-trait = "0.1.88"

# Postgres Database
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"

# Logging and Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JSON and Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Error Handling
thiserror = "2.0.12"

# Utilities
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

# Unclassified


[dev-dependencies]
serial_test = "3.2.0"
mockall = "0.13.1"
tower = "0.5.2"
testcontainers = "0.24.0"
